# Fastmolwidget

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  profile_grow.py  pyproject.toml  setup.py
.githooks/: pre-push
.github/workflows/: python-publish.yml  tests.yml
src/fastmolwidget/: __init__.py  density.py  diff_map.py  dsrmath.py  isosurface.py  loader.py  molecule2D.py  molecule3D.py  molecule_base.py  molecule_quick3D.py  sdm.py  shaders.py  tools.py  viewer_widget.py  viewer_widget3D.py
src/fastmolwidget/cif/: cif_file_io.py
src/fastmolwidget/qml/: MolViewer3D.qml
src/sdm_cpp/: sdm_cpp.cpp
tests/: test_atoms.py  test_build_conntable.py  test_cif_io.py  test_density.py  test_diff_map.py  test_dsrmath.py  test_loader.py  test_molecule2D.py  test_molecule_quick3D.py  test_sdm_cpp.py  test_viewer_widget.py  test_viewer_widget3D.py
tests/test-data/: 1548072_many_atoms.res  41467_2015_BFncomms9288_MOESM1367_ESM.cif  41467_2015_BFncomms9288_MOESM1370_ESM.res  41467_2015_BFncomms9288_MOESM1371_ESM.cif  41467_2015_BFncomms9288_MOESM1372_ESM.cif  p21c.cif  p31c-finalcif.hkl  p31c-finalcif.res  test_molecule.res  test_molecule.xyz
