[project]
name = "fastmolwidget"
version = "0.1.0"
description = "A PyQt widget to display crystal structures"
readme = "README.md"
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" }
]
requires-python = ">=3.14"
dependencies = [
    "gemmi>=0.7.5",
    "numpy>=2.4.4",
    "pyside6-essentials>=6.11.0",
    "qtpy>=2.4.3",
    "shelxfile>=22",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "pyside6-stubs",
]

doc = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme",
]

[project.scripts]
fastmolwidget = "fastmolwidget:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
