[project]
name = "fastmolwidget"
version = "0.6.0"
description = "A PyQt widget to display crystal structures"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" }
]
requires-python = ">=3.12"
keywords = ["chemistry", "crystallography", "qt", "widget", "molecule", "structure", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "gemmi>=0.7.5",
    "numpy>=2.2.0",
    "qtpy>=2.4.3",
    "shelxfile>=22",
]

[project.optional-dependencies]
pyside6 = [
    "pyside6-essentials>=6.11.0",
]
pyqt6 = [
    "pyqt6>=6.9.0",
]
gl3d = [
    "PyOpenGL>=3.1.7",
]
# cpp: build-time only — pybind11 must be present when running
#   pip install -e . --no-build-isolation
# macOS users also need:  brew install libomp
cpp = [
    "pybind11>=2.13",
]

[project.urls]
Homepage = "https://github.com/dkratzert/Fastmolwidget"
Repository = "https://github.com/dkratzert/Fastmolwidget"
Issues = "https://github.com/dkratzert/Fastmolwidget/issues"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "pyside6-stubs",
    "pybind11>=2.13",
]

doc = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme",
]

[project.scripts]
fastmolwidget = "fastmolwidget:main"

[build-system]
# setuptools is used instead of uv_build because it supports C extensions
# (the optional sdm_cpp pybind11 module).  pybind11 and wheel are build-time
# only; they are not installed into the user environment.
requires = ["setuptools>=68", "pybind11>=2.13", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
# Build wheels for Python 3.12, 3.13, and 3.14 on Windows, macOS, and Linux
skip = ["*-win32", "*-manylinux_i686"]
build = ["cp312-*", "cp313-*", "cp314-*"]
# Skip per-wheel testing — the dedicated `tests` job (needs: tests) already
# validates the code before release-build runs.
test-skip = "*"


